devops-project/name-spaces/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-namespace
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
spec:
  rules:
    - host: my-domain.example.com
      http:
        paths:
          - path: /bnr
            pathType: Prefix
            backend:
              service:
                name: bnr-client-service
                namespace: bnr
                port:
                  number: 80
          - path: /erp
            pathType: Prefix
            backend:
              service:
                name: erp-client-service
                namespace: erp
                port:
                  number: 80
          - path: /oms
            pathType: Prefix
            backend:
              service:
                name: oms-client-service
                namespace: oms
                port:
                  number: 80
          - path: /store
            pathType: Prefix
            backend:
              service:
                name: store-client-service
                namespace: store
                port:
                  number: 80
